Synchronize all started threads in SemanticHighlighter d'tor

This fixes a possible crash on session switch or on shutdown.

Task-number: QTCREATORBUG-25708
Change-Id: I5dcc2420dca27b9856f47616c6f465ae8f059942
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>